# libfuckit

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  libfuckit.pc  libfuckit.pc.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  a.out  fuckcpp.c  fuckcpp.h  fuckit.c  fuckit.h  fuckit_dyn.c  fuckit_dyn_generated.h  main.c  main2.cpp  main_dyn.c  wrapper_gen.py
src/.deps/: fuckcpp.Po  main.Po
